# arcanomy-motion

./: .gitattributes  .gitignore  README.md  START_HERE.md  package.json  pnpm-lock.yaml  pyproject.toml
arcanomy-reel-docs/: REEL_CREATION_MANIFESTO.md  REEL_WRITING_GUIDE.md
doc/: 00-README.md  01-vision-and-reel-types.md  02-architecture-and-folder-structure.md
docs/: 00-README.md  01-vision-and-reel-types.md  02-architecture-and-folder-structure.md  03-seed-and-config-format.md  04-pipeline-stages.md  05-visual-style-and-subtitles.md  06-blog-ingestion.md  08-chart-components-plan.md  PIPELINE_DEEP_DIVE.md  README.md  REFRACTOR_RFC.md  VIDEO_GENERATION_PIPELINE.md
docs/_archive/: 02-architecture-and-folder-structure.md  03-seed-and-config-format.md  04-pipeline-stages.md  05-visual-style-and-subtitles.md  06-blog-ingestion.md  07-remotion-guide.md  08-chart-components-plan.md  Arcanomy_Claim_to_Reel_PRD.md
docs/arcanomy-studio-integration/: 01-file-formats.md  02-chart-schema.md  03-chart-examples.md  04-remotion-setup.md  05-extraction-prompts.md  06-validation-checklist.md  07-r2-storage.md  README.md
docs/charts/: README.md  bar-chart-basic.json  bar-chart-comparison.json  bar-chart-highlight.json  bar-chart-minimal.json  bar-chart-negative.json  bar-chart-ranking.json  bar-chart-timeline.json  horizontal-bar-chart-basic.json  line-chart-basic.json  number-counter-basic.json  pie-chart-basic.json  progress-chart-basic.json  remotion_props.json  scatter-chart-basic.json  stacked-bar-chart-basic.json
docs/guidelines/: Arcanomy_Admired_Finance_Sites.md  Arcanomy_Writing_Style_Guide.md  README.md  arcanomy_manifesto.md  implementation-checklist-newsletter-2025.md  master-writing-principles.md  newsletter-implementation-plan-final.md  newsletter-strategy-2025.md  newsletter-writing-guide.md  no-ai-content.md  reference-management.md  the-slippery-slope-principle.md
docs/plans/: ai-reel-creation.md
docs/principles/: CapCut_Assembly_Guide.md  Cursor_Task_Checklist_Arcanomy_Reels.md  arcanomy-reels-operating-system.md
docs/production/: quality-playbook.md
docs_v2/: 00-glossary.md  01-product-goals.md  02-core-primitive.md  03-repo-layout.md  04-run-folder-spec.md  05-domain-model.md  06-json-schemas.md  07-daily-workflow.md  08-deterministic-verification.md  09-broll-library.md  10-music-library.md  11-chart-overlays.md  12-r2-storage.md  13-blog-source-store.md  14-supabase-concept-ledger.md  15-cli-contract.md  16-observability-and-provenance.md  17-v1-to-v2-migration.md  18-capcut-kit-spec.md  19-clarifications-needed.md  20-testing-strategy.md  21-beat-sheet-sanity-check.md  README.md
docs_v2/schemas/: asset_manifest.schema.json  asset_requirements.schema.json  beat_sheet.schema.json  blog.schema.json  broll_index.schema.json  claim_candidates.schema.json  claim_locked.schema.json  dedupe_report.schema.json  kit_manifest.schema.json  ledger_entry.schema.json  music_index.schema.json  provenance.schema.json  run_context.schema.json  script.schema.json  script_verified.schema.json
docs_v2/templates/: blog.example.json  edit_plan.template.md
motion_v2/: README.md
motion_v2/apps/reels_cli/: pyproject.toml
motion_v2/apps/reels_cli/reels_cli/: cli.py
remotion/: package.json  pnpm-lock.yaml  remotion.config.ts  tsconfig.json
remotion/src/: Root.tsx
scripts/: generate_asset.py  generate_sound_effects.py  generate_video.py
shared/prompts/: 01_research_system.md  02_script_system.md  03.5_asset_generation_system.md  03_visual_plan_system.md  05_voice_system.md  06.5_sound_effects_generation_system.md  assets_system.md  research_system.md  script_system.md
src/: __init__.py  commands.py  config.py  main.py
src/domain/: __init__.py  manifest.py  objective.py  segment.py
src/pipeline/: __init__.py  assets.py  captions.py  charts.py  kit.py  planner.py  provenance.py  runner.py  scriptwriter.py  videos.py  vidprompt.py  visual_plan.py  visuals.py  voice.py
src/prompts/: plan_system.md  video_prompt_system.md  visual_plan_system.md
src/services/: __init__.py  blog_ingest.py  chart_renderer.py  (+5 more)
tests/: __init__.py  test_domain.py
(+70 files in other folders)
