[project]
name = "arcanomy-motion"
version = "0.1.0"
description = "AI-powered short-form video production pipeline for financial content"
requires-python = ">=3.10"
dependencies = [
    # LLM Providers
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "google-generativeai>=0.8.0",
    # Voice Synthesis
    "elevenlabs>=1.0.0",
    # Core utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    # Media processing
    "pillow>=10.0.0",
    "requests>=2.31.0",
    # HTTP client
    "httpx>=0.27.0",
    # Auth (for API clients)
    "pyjwt>=2.8.0",
    "google-genai>=1.56.0",
]

[project.scripts]
arcanomy = "src.commands:app"

# Shorthand commands
set = "src.commands:_run_set"
current = "src.commands:_run_current"
guide = "src.commands:_run_guide"
reels = "src.commands:_run_reels"
chart = "src.commands:_run_chart"
commit = "src.commands:run_commit"

# Pipeline stages (each runs ONLY that stage)
init = "src.commands:run_init"
plan = "src.commands:run_plan"
visual_plan = "src.commands:run_visual_plan"
seed-images = "src.commands:run_seed_images"
vidprompt = "src.commands:run_vidprompt"
videos = "src.commands:run_videos"
subsegments = "src.commands:run_subsegments"
voice = "src.commands:run_voice"
captions = "src.commands:run_captions"
charts = "src.commands:run_charts"
kit = "src.commands:run_kit"
run-all = "src.commands:run_all"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
