[project]
name = "arcanomy-reels-cli"
version = "0.1.0"
description = "Arcanomy Reels v2 CLI (steel-thread scaffold)"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.0.0",
]

[project.scripts]
reels = "reels_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reels_cli"]

